# mini_calc

./: README.md  pyproject.toml
src/mini_calc/: __init__.py  app.py
